Fix button hover in signup block being invisible.

--- a/modules/core/client/scss/block/_signup-demo.scss
+++ b/modules/core/client/scss/block/_signup-demo.scss
@@ -11,6 +11,10 @@ article.signup-demo {
             font-size: 1.375rem;
             color: #fff;
         }
+
+        button, a.button {
+            &:hover { background-color: mix($color-blue-dark, $color-blue-mid); }
+        }
     }
 
     @mixin layout($is-stacked: false) {
